[tool.poetry]
name = "refreshrepos"
version = "0.1.0"
description = ""
authors = ["Paul Aswa <aswapaul@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.8"
click = "^7.1.2"
pyconfigreader = "^0.8.2"
GitPython = "^3.1.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
